Block suspended moderators from restricted announcements
