# artifacts/api-server/src/routes/index.ts
@@ -5,10 +5,12 @@ import storageRouter from "./storage";
 import clipsRouter from "./clips";
 import advertisingRouter from "./advertising";
 import adminRouter from "./admin";
+import announcementsRouter from "./announcements";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(announcementsRouter);
 router.use("/admin", adminRouter);
 router.use(socialRouter);
 router.use(storageRouter);
